Improve light-dark colors

--- a/defaults.css
+++ b/defaults.css
@@ -13,11 +13,10 @@
 }
 
 body {
-    font-size: 16px;
     font-family: system-ui;
     line-height: 1.5;
-    color: #333;
     -webkit-font-smoothing: antialiased;
+    -moz-osx-font-smoothing: grayscale;
 }
 
 /* 6. Improve media defaults */
@@ -64,9 +63,10 @@ h6 {
     text-wrap: balance;
 }
 
-.container {
-    max-width: 600px;
-    margin: auto;
+/* Lighter colors */
+body {
+    color: light-dark(#3e3a3a, #eee);
+    background-color: light-dark(#fff, #222);
 }
 
 /* Add offset to separate 1px border with outline */
@@ -77,17 +77,24 @@ h6 {
 /* Better link color, disable old visited */
 a,
 a:visited {
-    color: royalblue;
+    color: light-dark(royalblue, dodgerblue);
 }
 
 /* Less aggressive background colors */
 select,
+input,
 button {
-    background-color: #eee;
+    background-color: light-dark(#2221, #fff1);
 }
 select:active,
 button:active {
-    background-color: #ddd;
+    background-color: light-dark(#2222, #fff2);
+}
+
+/* Use modern monospace fonts on Windows & MacOS */
+pre,
+code {
+    font-family: Consolas, Monaco, monospace;
 }
 
 /* Less aggressive borders */
@@ -100,7 +107,7 @@ th,
 td,
 hr {
     border-radius: 3px;
-    border: 1px solid #ccc;
+    border: 1px solid light-dark(#ccc, #888);
 }
 
 /* Improved padding & margin on user action elements */
@@ -111,6 +118,7 @@ textarea {
     padding-inline-start: 0.5rem;
 }
 button {
+    padding: 0.2rem;
     padding-inline: 0.5rem;
 }
 ul,
@@ -131,4 +139,9 @@ td {
 /* Single border by default */
 table {
     border-collapse: collapse;
+}
+
+.container {
+    max-width: 600px;
+    margin: auto;
 }
