--- a/defaults.css
+++ b/defaults.css
@@ -23,8 +23,7 @@ body {
 img,
 picture,
 video,
-canvas,
-svg {
+canvas {
     display: block;
     max-width: 100%;
 }
@@ -78,6 +77,17 @@ body {
 a,
 a:visited {
     color: light-dark(royalblue, dodgerblue);
+}
+
+/* Button toggle pointers */
+button {
+    cursor: pointer;
+}
+
+/* Button disabled state */
+button:disabled {
+    opacity: 0.7;
+    pointer-events: none;
 }
 
 /* Less aggressive background colors */
